# 10_dynamicinstruct

./: .gitignore  connection.py  main.py  pyproject.toml
exercise1/: connection.py  main.py  pyproject.toml
exercise2/: .gitignore  main.py  pyproject.toml
exercise3/: connection.py  main.py  pyproject.toml
